--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,3 +4,18 @@ body
 	text-aling: center;
 	font_family: "Arial";
 }
+
+#container
+{
+	width: 70%;
+	padding: 1em;
+	text-align: left;
+	border: 1px soil #DDD;
+	margin: 0 auto;
+}
+
+#container h1
+{
+	front-size: 20px;
+}
+
