--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,17 +5,38 @@ body
 	font_family: "Arial";
 }
 
+#cabecera
+{
+	background: #88G;
+	color: white;
+	front-weight: bold;
+	box-shadow: 0px 5px 30px 0px rgba(0,0,0,0.75);
+	margin: 0;
+	padding: 0.5em;
+
+
 #container
 {
 	width: 70%;
-	padding: 1em;
+	padding: 0em;
 	text-align: left;
 	border: 1px soil #DDD;
 	margin: 0 auto;
 }
 
+#cabecera #tagline
+{
+	front-weight: normal;
+	front-size: 0.8em;
+}
+
 #container h1
 {
 	front-size: 20px;
+}
+
+#post
+{
+	padding: 0;
 }
 
