--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,20 +1,20 @@
 
 body
 {
-	text-aling: center;
-	font_family: "Curiel";
+	text-align: center;
+	font-family: "Curiel";
 }
 
 #cabecera
 {
-	background: #88G;
+	background: 88G;
 	color: white;
-	front-weight: bold;
+	font-weight: bold;
 	box-shadow: 0px 5px 30px 0px rgba(0,0,0,0.75);
 	margin: 0;
 	padding: 0.5em;
 
-
+}
 #container
 {
 	width: 70%;
@@ -26,13 +26,13 @@ body
 
 #cabecera #tagline
 {
-	front-weight: normal;
-	front-size: 0.8em;
+	font-weight: normal;
+	font-size: 0.8em;
 }
 
 #container h1
 {
-	front-size: 20px;
+	font-size: 20px;
 }
 
 #post
